fixed - in All website dashboard, the font size is bigger now - IE: there could be a bit more right padding in the Actions URL table next to the expanding + icon - the full calendar div should be clickable (left/right pixels not clickable on calendar when folded) - The language selector appears below the website selector but I can't seem find a solution... maybe you can? I tried z-index on the language id span
git-svn-id: http://dev.piwik.org/svn/trunk@2580 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/CoreHome/templates/datatable.css
+++ b/plugins/CoreHome/templates/datatable.css
@@ -240,7 +240,6 @@ table thead div {
 	color: #888888;
 	text-align:left;
 	margin: 10px;
-	font-size: 0.9em;
 }
 
 .dataTablePages {
@@ -251,7 +250,8 @@ table thead div {
 }
 
 .dataTableSearchPattern {
-	margin:8px 0;
+	margin:8px 0 0 0;
+	height:30px;
 	display: block!important;
 	white-space: nowrap;
 	background:  url(../../../themes/default/images/search_bg.png) no-repeat center 0;
@@ -410,7 +410,6 @@ table thead div {
 
 .pk-loadingDataTable {
 	float: left;
-	font-size: 0.9em;
 	color: #193B6C;
 	padding: 0 0.5em;
 }
@@ -453,6 +452,7 @@ table.dataTableActions img.link {
 }
 tr td.label img.plusMinus {
 	margin-right: 0em;
+	.margin-right: 4px;
 	margin-left:-1em;
 }
 
@@ -460,6 +460,5 @@ tr td.label img.plusMinus {
 	padding-top: 20px;
 	padding-bottom: 10px;
 	text-align: center;
-	font-size: 0.9em;
 	font-style: italic;
 }
